# django-shopify-sync

./: .gitlab-ci.yml  Dockerfile  README.rst  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test.py
docs/: Makefile  conf.py  index.rst  modules.rst  shopify_sync.models.rst  shopify_sync.rst  shopify_sync.tests.rst
sandbox/: settings.py  urls.py  wsgi.py
shopify_sync/: __init__.py  admin.py  apps.py  encoders.py  handlers.py  utils.py
shopify_sync/migrations/: 0001_initial.py  0002_auto_20181220_1714.py  0002_auto_20190107_1622.py  0003_merge_20190107_1818.py  0004_auto_20190621_0852.py  0005_remove_customer_default_address.py  0006_auto_20160314_0532.py  0006_auto_20190712_0702.py  0006_remove_order_billing_address.py  0007_genericipfield.py  0007_order_billing_address.py  0007_order_shipping_address.py  0008_auto_20160314_2331.py  0008_auto_20190704_0807.py  0008_order_fulfillments.py  0009_auto_20160314_2341.py  0009_auto_20190918_1508.py  0010_auto_20160409_0300.py  0010_auto_20200819_1929.py  0011_auto_20160411_2231.py  0011_historicalproduct_historicalvariant.py  0012_auto_20160530_0013.py  0012_auto_20200821_2221.py  0013_auto_20160621_2202.py  0013_auto_20200824_2105.py  0014_auto_20160622_1547.py  0014_auto_20200824_2106.py  0014_make_session.py  0015_add_session.py  0015_auto_20160622_1808.py  0015_variant_inventory_item_id.py  0016_inventoryitem_inventorylevel.py  0016_null_variant_title.py  0017_auto_20160623_0856.py  0017_auto_20200901_1714.py  0018_auto_20161007_0756.py  0018_auto_20200901_1744.py  (+24 more)
(+35 files in other folders)
